<resources>
    <string name="app_name">Cultural Travel App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forget_password">Forget Password</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_get_started">Sign up to get Started!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="im_already_a_member_sign_in">Im already a member. Sign In.</string>
    <string name="go_near_and_explore_cultures">Go near and Explore cultures</string>
    <string name="explore_culture_with_fun">Explore Culture with Fun</string>
    <string name="sub_title_hori">Interactive activities you can do together, led by experts hosts.</string>
    <string name="the_sky_is_the_limit">The sky is the limit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_the_card">Name on the Card</string>
    <string name="cvv">CVV</string>
    <string name="expiry_placeholder">Expiry Placeholder</string>
    <string name="confirm_pay"><![CDATA[Confirm & Pay]]></string>
    <string name="fill_all_the_following_information">*Fill all the following information</string>
    <string name="sign_out">Sign out</string>
    <string name="view_profile">View Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="about_us">About </string>
    <string name="pasta_making_lasagne">Pasta Making: Lasagne</string>
    <string name="what_you_will_do">What You Will Do?</string>
    <string name="see_date">see date</string>
    <string name="from_31_person">$31/Person</string>
    <string name="select_dates">Select Dates</string>
    <string name="confirm_amp_pay"><![CDATA[CONFIRM & PAY]]></string>
    <string name="thur_dec_3">Thur, Dec 3</string>
    <string name="fri_dec_4">Fri, Dec 4</string>
    <string name="mon_dec_7">Mon, Dec 7</string>
    <string name="_6_00_am_8_00_am">6:00 AM - 8:00 AM</string>
    <string name="_35_person">$35/Person</string>
    <string name="include">include</string>
    <string name="mystery_amp_culture_box"><![CDATA[mystery & culture box]]></string>
    <string name="event_location">Event Location</string>
    <string name="event_host">Meet the Host: </string>
    <string name="event_duration">Event Duration</string>
    <string name="event_language">Event Language</string>
    <string name="event_desc">event desc</string>
    <string name="username">UserName</string>
    <string name="support">Support</string>
    <string name="my_trip">My Trip</string>
    <string name="verified_user">Verified User</string>
    <string name="explore_nearby_event">Explore NearBy Event</string>
    <string name="explore_all">Explore All</string>
    <string name="read_more">Read More</string>
    <string name="about_home">We offer an exclusive experience that you will absolutely enjoy by learning about other cultures as you travel to the country.</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="s">##</string>
    <string name="afrikadey">Afrikadey Festival</string>
    <string name="festival_du_voyageur">Festival du Voyageur</string>
    <string name="winter_light">Winter Light Festival</string>
    <string name="tabestoon_festival">Tabestoon Festival</string>
    <string name="northern_lights_festival">Northern Lights Festival</string>
    <string name="event_date">Event Date</string>
    <string name="location">Location:</string>
    <string name="event_category">Event Category:</string>
    <string name="thank_you">Thank You!</string>
    <string name="booking_history">Booking History</string>
    <string name="french_culture">French</string>
    <string name="italian_culture">Italian</string>
    <string name="indian_culture">Indian</string>
    <string name="event_name">Event Name</string>
    <string name="remove_booking">Remove Booking</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="explore_french">Explore the French culture</string>
    <string name="explore_indian">Explore the Indian culture</string>
    <string name="explore_italian">Explore the Italian culture</string>
    <string name="guests_allowed">Guests allowed</string>
    <string name="from_date">From</string>
    <string name="meet_your_host">Meet the Host:</string>
    <string name="dana">Dana</string>
    <string name="number_of_days">Number of Days</string>
    <string name="frequently_booked_together">Frequently Booked Together</string>
    <string name="what_is_cmb">What is CMB?!</string>
    <string name="guests">Guests</string>
    <string name="total_233">Total : </string>
    <string name="adult">Adult</string>
    <string name="children">Children</string>
    <string name="exlpore_french_culture">Explore French Culture</string>
    <string name="mystery_box_title">Mystery Box</string>
    <string name="mystery_box_content">for an additional 30$, you can add a special food or clothing based on the culture of your host</string>
    <string name="verified">Verification is how you prove that your account is the authentic presence of a real person.

        You’ve probably seen plenty of verification badges around.
        </string>
    <string name="v2"> who  has confirmed their account in question is trustworthy, or at least they are who they say they are.

These badges are designed to make the real accounts stand out, so that our host can be sure they are talking with the right person .</string>
    <string name="become_verified_user">Become Verified User</string>
    <string name="verified_now">Verified Now</string>
    <string name="click_to_continue">Click to Continue!</string>
    <string name="it_is_in">It is in your hand. Come Join us and have fun</string>
    <string name="you_can_now_have">you can now have the apportunity to live other culture in your community</string>
    <string name="_2020_culture_app_all_rights_reserved">© 2020 Culture App All Rights Reserved</string>
    <string name="you_">You will enjoy every single minute in this event. it is all on us,FREE EVENT, just come and bring your friends</string>
    <string name="thanks_for">Thanks for checking out, we are hope that our app can make your day a little more enjoyable.</string>
    <string name="book_now">Book Now</string>
    <string name="explore">Explore</string>
    <string name="about_me">about me</string>
    <string name="guest_number">Guest Number</string>
    <string name="date">Date:</string>
    <string name="host_name">Host Name:</string>
    <string name="explore_french_culture">Explore French Culture</string>
    <string name="who_are_we">WHO ARE WE ?</string>
    <string name="we_are_a_group_of_ambitious_individuals_n_trying_to_make_the_lives_of_people_across_the_world_more_peaceful_by_bringing_together_the_cultures_of_the_world_we_are_extremely_resolute_towards_our_goal_and_this_culturaltravel_app_is_a_small_beginning_for_achieving_it_this_app_will_provides_you_the_opportunity_to_connect_with_other_people_and_enjoy_their_traditional_and_cultural_activities_occuring_in_your_nearby_places">We are a group of ambitious individuals\n trying to make the lives of people across the world more peaceful by bringing together the cultures of the world. We are extremely resolute towards our goal and this CulturalTravel App is a small beginning for achieving it. This app will provides you the opportunity to connect with other people and enjoy their traditional and cultural activities occuring in your nearby places.</string>
    <string name="rate_us">RATE US</string>
    <string name="support_ncenter">SUPPORT CENTER</string>
    <string name="we_are_here_to_help_you_nget_in_touch_with_our_customer_support_team">We are here to help you. Get in touch with our customer support team.</string>
    <string name="exploring_the">Exploring The</string>
    <string name="booking_event">Booking Event</string>
    <string name="stayover_booking">StayOver Booking</string>
    <string-array name="language_array">
        <item>English</item>
        <item>भारतीय</item>
        <item>française</item>
        <item>italiana</item>
    </string-array>
    <string name="culture_mystery_box">Boîte mystère de culture</string>
</resources>