<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_verified_user"
            android:icon="@drawable/ic_verified_user"
            android:title="@string/verified_user" />
    </group>


    <item android:title="Booking History">
        <menu>
            <item
                android:id="@+id/nav_booking_event"
                android:icon="@drawable/ic_history_24"
                android:title="@string/booking_event" />
            <item
                android:id="@+id/nav_stay_event"
                android:icon="@drawable/ic_history_24"
                android:title="@string/stay_over_booking" />

        </menu>
    </item>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>