<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verifieduser.VerifiedUserFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="133dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/applogo"
        android:text="@string/login"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="404dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/become_verified_user"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_verified_user"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="164dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="400dp"
        android:layout_height="94dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_horizontal"
        android:text="@string/verified"
        android:textAlignment="center"
        android:textColor="#816D6D"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />


    <TextView
        android:id="@+id/tv_3"
        android:layout_width="402dp"
        android:layout_height="136dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center_horizontal"
        android:text="@string/v2"
        android:textAlignment="center"
        android:textColor="#816D6D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view" />

    <Button
        android:id="@+id/verifiedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verified_now"/>


</androidx.constraintlayout.widget.ConstraintLayout>